[package]
name = "teliox"
version = "0.1.0"
authors = ["Edyta Pawlak <edyta.pawlakk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keri = { git = "https://github.com/decentralized-identity/keriox" }
base64 = "0.13.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
blake3 = "0.3.7"
serde-hex = "0.1"
nom = "5"
chrono = { version = "0.4.18", features = ["serde"] }

